@@ -1,0 +1,7 @@
+driver
+(
+	name "Fribbler"
+	plugin "libFribbler"
+	provides ["position2d:0"]
+	port "/dev/scribbler9"
+)
