@@ -1,3 +1,8 @@
 Test out picture taking and saving on scribbler
 
-Figure out why the driver plugin errors out when using it with the basic configuration file (/Fribbler.cfg).
+Fribbler Player Driver
+	- Main()
+	- ProcessMessage()
+	- etc. (as the need arises)
+
+Create a program to test the Fribbler driver.
